tests/src/test/scala/annotations/neg/macro-annotation-cyclic-a.check
Test_2.scala:1: error: illegal cyclic reference involving class B
@xrefCyclist class A
                   ^
one error found
